--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions/cache@v1
         with:
           path: ~/.gradle/caches
@@ -22,10 +22,10 @@ jobs:
           key: ${{ runner.os }}-build-files-${{ hashFiles('**/*.gradle*') }}
           restore-keys: |
             ${{ runner.os }}-build-files-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          java-version: 17
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
       - name: Build with Gradle
@@ -40,6 +40,6 @@ jobs:
         env:
           BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
           BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
-        run: ./gradlew bintrayUpload --stacktrace
+        run: ./gradlew publish --stacktrace
       - name: Remove jars before caching
         run: rm ./build/libs/*.jar
