--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,6 +9,7 @@ jobs:
       - name: JDK 17
         uses: actions/setup-java@v3
         with:
+          distribution: adopt
           java-version: 17
       - name: Build
         run: ./gradlew build test
